# BrikoEngineECS

./: CMakeLists.txt  aliases.hpp  compile_commands.json  compile_flags.txt  component.hpp  entitymanager.hpp  main.cpp  slotmap.hpp  src.7z
.cache/clangd/index/: Angle.inl.B661AEC09DCC229E.idx  BlendMode.hpp.5F0847BAFA0ABE08.idx  CircleShape.hpp.F741BEBCF9903A05.idx  Clock.hpp.3EF89D2F0A86D5F8.idx  Color.hpp.AB24767C314F5C5C.idx  Color.inl.2C9F84114DA8A354.idx  Config.hpp.E79E80E80ACAAB46.idx  Context.hpp.2FD7F8E0D85D2F31.idx  ContextSettings.hpp.0C3E197F61B71B42.idx  ConvexShape.hpp.FBF1226D0B323566.idx  CoordinateType.hpp.0197605E692C1CF6.idx  Cursor.hpp.18F7B4B60DC8DD82.idx  Drawable.hpp.062891A2791D2AE1.idx  Err.hpp.A38888D65C402433.idx  Event.hpp.C28EA8F1D7623BDC.idx  Event.inl.8389340A45B1875A.idx  Exception.hpp.03AEE096F1BC8076.idx  Export.hpp.1C18EC95CA36CC7B.idx  FileInputStream.hpp.E0EC7A6D52AD5E64.idx  Font.hpp.18275448895B207C.idx  GlResource.hpp.E879128CC0E26638.idx  Glsl.hpp.33BAAA50DA3165D9.idx  Glsl.inl.07735CEA9BDCB6AF.idx  Image.hpp.BD5C4180BDAA9F7B.idx  InputStream.hpp.E9E377849FFB70F4.idx  Joystick.hpp.111DAAC562BCB3E6.idx  Keyboard.hpp.5A700B0BAE299CE9.idx  MemoryInputStream.hpp.DFEDA8F19BD6E87F.idx  PrimitiveType.hpp.373D8EC21879EA1B.idx  Rect.hpp.058EFAE78FAE6085.idx  Rect.inl.77F7686C8DB67307.idx  RectangleShape.hpp.7FAB81F3AB955BF9.idx  RenderTarget.hpp.412E87CE73398836.idx  RenderTexture.hpp.879F5852586A5021.idx  RenderWindow.hpp.A99DC553580B6BF7.idx  Shader.hpp.F07C10FF62E8B281.idx  Shape.hpp.004EBF0DE361AAB6.idx  Sprite.hpp.9B4B127F39D2E6E5.idx  StencilMode.hpp.0135C7A151601B43.idx  String.hpp.0A89F14F0659D249.idx  (+34 more)
datastructs/: slotmap.hpp
ecs/: component.hpp  entity.hpp  entitymanager.hpp  slotmap.hpp
game/components/: position.cpp  velocity.cpp
src/: main.cpp
src/datastructs/: circularbuffer.hpp  slotmap.hpp
src/ecs/: aliases.hpp  component.hpp  entity.hpp  entitymanager.hpp
src/game/components/: collision.hpp  input.hpp  life.cpp  life.hpp  position.cpp  position.hpp  sprite.hpp  state.hpp  textinfo.hpp  velocity.cpp  velocity.hpp
src/game/systems/: input.cpp  input.hpp  render.cpp  render.hpp  rendertext.cpp  rendertext.hpp
